--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
 
     {% block corecss %}
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
             <link rel="stylesheet" href="{% static 'blog/main.css' %}">
     {% endblock %}
@@ -70,12 +70,12 @@
     <div class="col-md-8">
     {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
+            <div class="alert alert-{{ message.tags }}" role="alert">
                 {{ message }}
             </div>
         {% endfor %}
-    {% endif %}
-      {% block content %}{% endblock %}
+     {% endif %}
+       {% block content %}{% endblock %}  
     </div>
     <div class="col-md-4">
       <div class="content-section">
