--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -3,5 +3,13 @@
 
         <h1>About Page</h1>
 
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="it-bangs.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
 {% endblock content %}
     
