--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -58,7 +58,7 @@
           <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
           <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
           {% else %}
-          <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+          <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
           <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
           {% endif %}
         </div>
