--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <h1>{% trans "Sign In" %}</h1>
-
+<h2>HI GUYS</h2>
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
