--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -5,11 +5,9 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block inner_content %}
+{% block content %}
 
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
+    <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -18,10 +16,11 @@
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form|crispy }}
-        <a class="btn btn-1 rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+        {{ form.as_p }}
         <input type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
+
+
