--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -56,10 +56,10 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
           <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-          <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+          <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
           {% else %}
           <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
-          <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+          <a class="nav-item nav-link" href="{% url 'raccount_egister' %}">Register</a>
           {% endif %}
         </div>
       </div>
