fixed speling mistake in nav linl'

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -59,7 +59,7 @@
           <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
           {% else %}
           <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
-          <a class="nav-item nav-link" href="{% url 'raccount_egister' %}">Register</a>
+          <a class="nav-item nav-link" href="{% url 'raccount_register' %}">Register</a>
           {% endif %}
         </div>
       </div>
@@ -92,6 +92,6 @@
       </div>
     </div>
   </div>
-</main>Ï
+</main>
   </body>
 </html>
