--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -59,7 +59,7 @@
           <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
           {% else %}
           <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
-          <a class="nav-item nav-link" href="{% url 'raccount_register' %}">Register</a>
+          <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
           {% endif %}
         </div>
       </div>
