--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,10 +5,12 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
-<h1>{% trans "Sign In" %}</h1>
-<h2>HI GUYS</h2>
+<hr>
+<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
+<hr>
+
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
@@ -29,18 +31,24 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
+<p claas="account-details-text" >{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<form class="login " method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+
+  <a lass="btn  btn-1 text-center" href="{% url 'home' %}">Home</a>
+  <button class="primaryAction btn-1" type="submit">{% trans "Sign In" %}</button>
+  <p class="mt-2">
+    <a class="btn btn-outline-primary btn-1 text-center secondaryAction rounded-0" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+  </p>
 </form>
 
+
+    
 {% endblock %}
