--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -82,3 +82,59 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.allauth-form-inner-content p {
+  margin-top: 1.5rem; /* mt-4 */
+  color: black; /* text-secondary */
+  font-weight: bolder;
+}
+
+.allauth-form-inner-content input {
+  border-color: black;
+  border-radius: 0.5;
+}
+
+.allauth-form-inner-content label:not([for="id_remember"]) {
+  display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+  color: #aab7c4;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type="submit"] {
+  /* btn */
+  display: inline-block;
+  font-weight: 400;
+  background-color: transparent;
+  color: black;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  box-shadow: 0 0 5px 2px rgba(71, 126, 232, 0.5);
+  border: 1px solid #000;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: 'Comfortaa', cursive;
+
+
+  /* standard bootstrap btn transitions */
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type="submit"]:hover {
+  color: #fff;
+  background-color: #222;
+  border-color: #222;
+}
+
+.allauth-form-inner-content a {
+  color: black; /* text-info */
+}
