--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,45 +4,63 @@
         <div class="col-12 px-0">
             <div class="hero-image">
                 <div class="title-font  shadow px-2 mx-auto">
-                    <h1 class="text-center my-auto hero-title">About</h1>
-                    <p class="text-center">Farm to Box to You</p>
+                    <h1 class="text-center my-auto hero-title">Sunny</h1>
+                    <p class="text-center">Bang Bang</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="subscription-container">
+  <div class="container">
+
+      <div
+        class="col-sm-12 col-md-8 col-lg-6 mb-3 mt-3 jumbotron jumbotron-subscriptions text-center"
+      >
+
+        <h2 class="text-center header-section">
+          <strong>Chillies</strong>
+        </h2>
+        <hr class="w-50 mt-4" />
+        <p class="text-center landing-paragraph mb-lg-4 mt-lg-4">
+          Chillies come in all different sizes and flvours.
+          <br />We have a selection of chillies at the hear of our sauces <br />Come see the chillies
+        </p>
+
+        <a
+          href=""
+          type="button"
+          class="btn btn-outline-primary btn-1 text-center"
+          >Chillies</a
+        >
+      </div>
+    </div>
+  </div>
+
+
+<div class="container pt-3">
     <div class="row">
-        <div class="col-6 ">
-            <img src="{{ MEDIA_URL }}sauce-hand.jpg" alt="" height="300"
+        <div class="col-6 home-col ">
+            <img src="{{ MEDIA_URL }}sauce-hand.jpg" alt="" style="width: auto;max-height: 100% "
                 class="img-fluid veg-basket-img rounded mx-auto d-block mx-auto">
+                
 
         </div>
-        <div class="col-6 orange">
-            <div class="jumbotron-sauce mt-5">
+        <div class="col-6 home-col orange">
+            <div class="mt-5">
                 <h2 class="text-center header-section">
                     <strong>Sauce</strong>
                 </h2>
                 <hr class="w-50 mt-4" />
                 <p class="text-center landing-paragraph mb-lg-4 mt-lg-4">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis incidunt itaque, eligendi
-                    nulla adipisci esse, corrupti laudantium impedit cupiditate sint quo! Quae nostrum ut consectetur
-                    totam vero suscipit, asperiores veniam?
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis incidunt itaque, eligendi
-                    nulla adipisci esse, corrupti laudantium impedit cupiditate sint quo! Quae nostrum ut consectetur
-                    totam vero suscipit, asperiores veniam?
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis incidunt itaque, eligendi
-                    nulla adipisci esse, corrupti laudantium impedit cupiditate sint quo! Quae nostrum ut consectetur
-                    totam vero suscipit, asperiores veniam?
+             
                 </p>
-
             </div>
-
         </div>
     </div>
     <div class="row">
-        <div class="col-6 blue">
+        <div class="col-6 blue home-col">
             <h1>left</h1>
         </div>
         <div class="col-6">
