--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
 
     {% block corejs %}
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   
     <script src="https://kit.fontawesome.com/53108b937c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -50,14 +51,14 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Bang Bang</a>
+                <a class="navbar-brand mr-4" href="{% url 'home' %}">Bang Bang</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'home'%}">Home</a>
                         <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
                     </div>
                     <!-- Navbar Right Side -->
@@ -76,7 +77,7 @@
         </nav>
     </header>
 
-    <main role="main" class="container">
+    <main role="main" class="container-fluid px-0">
         <div class="row">
             <div class="col">
                 {% if messages %}
