fixed some mistakes in urls

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -6,7 +6,7 @@
       <div class="products-image">
         <div class="title-font shadow mx-auto px-2">
           <h1 class="text-center my-auto hero-title">Products</h1>
-          <p class="text-center">Boxes & Subscriptions</p>
+          <p class="text-center">Sauce and Merch</p>
         </div>
       </div>
     </div>
@@ -96,11 +96,11 @@
           style="width: 18rem"
         >
           {% if product.image %}
-          <a href="">
+       <a href="">
             <img
-              class=""
-              src=""
-              alt=""
+              class="img-fluid product-img"
+              src=" {{ product.image.url }}"
+              alt="{{ product.name }}"
             />
           </a>
           {% else %}
