addded products and products criteria functionality'

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -210,3 +210,10 @@ a.article-title:hover {
   text-align: center;
   margin-top: 40px;
 }
+
+
+.product-card {
+    width: 18rem;
+    height: 18rem;
+}
+
