--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -71,6 +71,23 @@
     </div>
 </div>
 
+<h1>What's my number?</h1>
+        <p>I am thinking of a number between 1 and 10 - can you guess it?</p>
+        <input type="text" id="number">
+        <button id="guess">Guess</button>
+        <p id="message"></p> <a href="">Play again</a>
+
+        <h1>The onclick Event</h1>
+
+<p>The onclick event is used to trigger a function when an element is clicked on.</p>
+
+<p>Click the button to trigger a function that will output "Hello World" in a p element with id="demo".</p>
+
+<button onclick="myFunction()">Click me</button>
+
+<p id="demo"></p>
+
+
 <div class="header-container container-fluid">
     <div class="row">
         <div class="col-12 px-0">
@@ -96,7 +113,8 @@
                     </div>
                 </div>
             </a>
-        </div>
+        </div> 
+
         <div class="col justify-content-center  d-flex mb-3">
             <a href="{% url 'products_criteria' %}?category=Merch">
                 <div class="card product-card">
@@ -114,6 +132,32 @@
 <!--AOS SCript-->
 <script>
     AOS.init();
+
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Hello World";
+}
+     
+            var randomNumber = Math.floor((Math.random() * 10)) + 1
+            
+            document.getElementById("guess").onclick =  function() {
+        
+                if (document.getElementById("number").value > randomNumber){
+                    document.getElementById("message").innerHTML = "Too High"
+                    document.getElementById("message").style.color = "red"
+                } else if (document.getElementById("number").value < 
+                           randomNumber){
+                    document.getElementById("message").innerHTML = "Too Low!"
+                    document.getElementById("message").style.color = "blue"
+                } else {
+                    document.getElementById("message").innerHTML = "That's it"
+                    document.getElementById("message").style.color = "green"
+                }
+                
+            }
+       
+
+
+
 </script>
 <!--AOS SCript End-->
 {% endblock %} {% include 'includes/footer.html' %}
