--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,19 +51,19 @@
         {% endif %}
         {% if request.user.is_superuser %}
             <small class="ml-3">
-                <a href="">Edit</a>
-                <a class="text-danger" href="">Delete</a>
+                <a href="{% url 'edit_product' product.id %}">Edit</a>
+                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
             </small>
         {% endif %}
         <p class="mt-3">{{ product.description }}</p>
-        <form class="form" action="" method="POST">
+        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
             {% csrf_token %}
             <div class="form-row">
                      {% with product.has_sizes as s %}
                             {% if s %}
                                 <div class="col-12">
                                     <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
                                         <option value="xs">XS</option>
                                         <option value="s">S</option>
                                         <option value="m" selected>M</option>
@@ -123,4 +123,3 @@
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %} 
 {% endblock %}
-
