--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                              <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>   
+                              
                 <a class="navbar-brand mr-4" href="{% url 'home' %}">Bang Bang</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{% url 'home'%}">Home</a>
                         <a class="nav-item nav-link" href="">About</a>
-                        <a class="nav-item nav-link" href="{% url 'products' %}">Products</a>
+                        <a class="nav-item nav-link" href="{% url 'all_products' %}">Products</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
@@ -66,11 +66,11 @@
                         {% else %}
                         <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
                         <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
-                        <a class="nav-item nav-link" href="{% url 'products' %}">Products</a>
-                        <li class="list-inline-item">
+                       
+                     <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                              
                                 <p class="my-0">
                                     {% if grand_total %}
                                         ${{ grand_total|floatformat:2 }}
@@ -80,13 +80,16 @@
                                 </p>
                             </div>
                         </a>
-                    </li>
+
                         {% endif %}
                     </div>
                 </div>
             </div>
         </nav>
     </header>
+    <div class="delivery-banner">
+        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>   
+    </div>
 
     <main role="main" class="container-fluid px-0">
         <div class="row">
@@ -106,6 +109,5 @@
     </main>
 
 </body>
-
 </html>
 
