added about pic and btn to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,21 @@
                 <div class="title-font  shadow px-2 mx-auto">
                     <h1 class="text-center my-auto hero-title">Sunny</h1>
                     <p class="text-center">Bang Bang</p>
+
                 </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row text-center">
+        <div class="col justify-content-center ">
+             <div class="about-img">
+        
+         <a href="" type="button" class="hero-btn animated-word ">About me Darrrrg</a>
+        
             </div>
         </div>
     </div>
@@ -33,14 +47,12 @@
 
 
 
-<div class="container">
+<div class="container justify-content-center">
     <h1>What's my number?</h1>
     <p>I am thinking of a number between 1 and 10 - can you guess it?</p>
     <input type="text" id="number">
     <button id="guess">Guess</button>
     <p id="message"></p> <a href="">Play again</a>
-
-   
 </div>
 
 <div class="header-container container-fluid">
@@ -58,7 +70,7 @@
 
 
 <div class="container mt-2">
-    <div class="row ">
+    <div class="row">
         <div class="col justify-content-center  d-flex mb-3">
             <a href="{% url 'all_products' %}?category=Sauce">
                 <div class="card poroduct-card" style="width: 18rem; height: 18rem;">
@@ -72,7 +84,8 @@
             <div class="col">
                 <h3 class="text-center">Sauce</h3>
                 <hr>
-                <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam a reprehenderit quis ullam!
+                <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam a
+                    reprehenderit quis ullam!
                     Labore, doloremque sit deserunt maiores quod corporis error, accusamus odio numquam consequatur
                     provident assumenda qui ex!</p>
             </div>
@@ -81,14 +94,15 @@
 </div>
 
 <div class="container mt-2">
-    <div class="row ">
-           <div class="col">
-                <h3 class="text-center">Merch</h3>
-                <hr>
-                <p class="text-justify"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam a reprehenderit quis ullam!
-                    Labore, doloremque sit deserunt maiores quod corporis error, accusamus odio numquam consequatur
-                    provident assumenda qui ex!</p>
-            </div>
+    <div class="row">
+        <div class="col">
+            <h3 class="text-center">Merch</h3>
+            <hr>
+            <p class="text-justify"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam a reprehenderit
+                quis ullam!
+                Labore, doloremque sit deserunt maiores quod corporis error, accusamus odio numquam consequatur
+                provident assumenda qui ex!</p>
+        </div>
         <div class="col justify-content-center  d-flex mb-3">
             <a href="{% url 'all_products' %}?category=Merch">
                 <div class="card poroduct-card" style="width: 18rem; height: 18rem;">
@@ -100,7 +114,7 @@
                     </div>
                 </div>
             </a>
-         
+
         </div>
     </div>
 </div>
