--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -24,8 +24,8 @@ ul {
   margin: 0;
 }
 
-.bg-steel {
-  background-color: #5f788a;
+.nav {
+  background-color: black;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -162,13 +162,6 @@ a.article-title:hover {
   border: 1px solid black !important;
 }
 
-.orange {
-    background-color:orange;
-}
-
-.blue {
-    background-color: blue;
-}
 
 
 .title-font {
@@ -211,7 +204,6 @@ a.article-title:hover {
   margin-top: 40px;
 }
 
-/* ------------------------------- Home */
 
 .product-card {
     width: 18rem;
@@ -219,3 +211,45 @@ a.article-title:hover {
     box-shadow: 1px 2px 3px black;
 }
 
+
+.animated-word {
+	font-family: Helvetica;
+	letter-spacing: 0.4em;
+	font-weight: 200;
+	font-size: 20px;
+	text-align: center;
+	color: #202125;
+  cursor: pointer;
+  max-width: 600px; 
+  width: 100%; 
+  outline: 3px solid;
+  outline-color: rgba(71, 126, 232,0.5);
+  outline-offset: 70px;
+  transition: all 600ms cubic-bezier(0.2, 0, 0, 0.8);
+}
+
+.animated-word:hover {
+	color: rgba(71, 126, 232, 0.7);
+  outline-color: rgba(71, 126, 232, 0);
+  outline-offset: 100px;
+}
+
+.about-img {
+  background: url("/media/sunny-double.jpg") no-repeat center center fixed;
+  object-fit:cover;
+  height: 100vh;
+}
+
+.hero-btn {
+  height: 20px;
+  display: block;
+  align-items: center;
+position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.about-btn {
+
+}
