--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -40,7 +40,7 @@
   <body>
     
 <header class="site-header">
-  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+  <nav class="navbar navbar-expand-md navbar-dark nav fixed-top">
     <div class="container">
       <a class="navbar-brand mr-4" href="{% url 'home' %}">Bang Bang</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
