--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 <body>
 
     <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark nav fixed-top">
             <div class="container">
                               
                 <a class="navbar-brand mr-4" href="{% url 'home' %}">Bang Bang</a>
